--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
             <div class="row">
                <div class="col-3">
                   <div class="card" style="width: 13rem;">
-                     <img class="card-img-top" src="assets/images/game1.jpg" alt="hangman">
+                     <a href = "https://bdavis905.github.io/Phychic-Game/index.html"> <img class="card-img-top" src="assets/images/game1.jpg" alt="hangman"></a>
                      <div class="card-body">
                         <p class="card-text text-center">Hangman</p>
                      </div>
