updated url link to new game portfolio/rpg

--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
             <div class="row">
                <div class="col-3">
                   <div class="card" style="width: 13rem;">
-                     <a href = "https://bdavis905.github.io/Phychic-Game/index.html"> <img class="card-img-top" src="assets/images/game1.jpg" alt="hangman"></a>
+                     <a href = "https://bdavis905.github.io/Phychic-Game/index.html"> <img class="card-img-top" src="assets/images/game1.jpg" alt="psychic"></a>
                      <div class="card-body">
                         <p class="card-text text-center">Hangman</p>
                      </div>
@@ -65,7 +65,7 @@
             </div>
             <div class="col-3">
                <div class="card" style="width: 13rem;">
-                  <img class="card-img-top" src="assets/images/rpg.jpg" alt="rpg">
+                  <a href = "https://bdavis905.github.io/week-4-game/index.html"> <img class="card-img-top" src="assets/images/rpg.jpg" alt="crystal"></a>
                   <div class="card-body">
                      <p class="card-text text-center">RPG</p>
                   </div>
