--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
             
 
             <div class="col-3">
-               <div class="card" style="width: 13rem;">
+               <div class="card" style="width: 13rem;"><a href=   "https://bdavis905.github.io/Trivia-Game/index.html">
                   <img class="card-img-top" src="assets/images/trivia.jpg" alt="trivia">
                   <div class="card-body">
                      <p class="card-text text-center">Trivia</p>
